--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation("org.postgresql:postgresql")
+	implementation("org.hibernate.orm:hibernate-core:7.2.4.Final")
+	implementation("org.springframework:spring-context:7.0.3")
 
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
